[package]
name = "botris-hello"
version = "0.1.0"
edition = "2021"

[dependencies]
botris = {path = "../../lib/botris"}

anyhow = {version = "1"}
log = {version = "0.4"}
pretty_env_logger = {version = "0.5"}

clap = {version = "4.5", features = ["derive"]}

futures = {version = "0.3"}
tokio = {version = "1.39", features = ["rt", "macros"]}
tokio-tungstenite = {version = "0.23", features = ["connect", "native-tls"]}
