[package]
name = "botris-hello"
version = "0.1.0"
edition = "2021"

[dependencies]
botris = {path = "../../lib/botris"}

tracing = {version = "0.1"}
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
anyhow = {version = "1"}

futures = {version = "0.3"}
tokio = {version = "1.39", features = ["rt", "macros"]}
tokio-tungstenite = {version = "0.23", features = ["connect", "native-tls"]}

clap = {version = "4.5", features = ["derive"]}
